# Astridr_Channels

./: README.md  pyproject.toml
astridr_channels/: __init__.py  email.py  router.py  slack.py  telegram.py  voice.py  wake_word.py  web.py
